--- a/100_Python_Utilities.ipynb
+++ b/100_Python_Utilities.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "100 Python Utilities.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOblkCHHwZOMXsY2wgFOIjU",
+      "authorship_tag": "ABX9TyMz1sSPWDpmhtYDuZCgF9d/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -488,13 +488,416 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8aFVgfbFQwsa"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8aFVgfbFQwsa",
+        "outputId": "47fc49e1-35f2-4f97-8b0f-76964b79533a"
       },
       "source": [
-        "#13 Program"
+        "#13 Program\r\n",
+        "\r\n",
+        "# Write a program that computes the net amount of a bank account based a transaction log from console input. \r\n",
+        "# The transaction log format is shown as following: D 100 W 200\r\n",
+        "\r\n",
+        "# D means deposit while W means withdrawal. \r\n",
+        "# Suppose the following input is supplied to the program: D 300 D 300 W 200 D 100 Then, the output should be: 500\r\n",
+        "\r\n",
+        "netAmount = 0\r\n",
+        "while True:\r\n",
+        "    s = input()\r\n",
+        "    if not s:\r\n",
+        "        break\r\n",
+        "    values = s.split(\" \")\r\n",
+        "    operation = values[0]\r\n",
+        "    amount = int(values[1])\r\n",
+        "    if operation==\"D\":\r\n",
+        "        netAmount+=amount\r\n",
+        "    elif operation==\"W\":\r\n",
+        "        netAmount-=amount\r\n",
+        "    else:\r\n",
+        "        pass\r\n",
+        "print(netAmount)\r\n",
+        "\r\n",
+        "\r\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "D 300 D 300 W 200 D 100\n",
+            "\n",
+            "300\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ELV5dCJQM-2I",
+        "outputId": "711a5131-183e-46eb-e0ac-9e5e2509ab8c"
+      },
+      "source": [
+        "#14 Program\r\n",
+        "\r\n",
+        "#A website requires the users to input username and password to register. Write a program to check the validity of password input by users. \r\n",
+        "#Following are the criteria for checking the password:\r\n",
+        "\r\n",
+        "#At least 1 letter between [a-z]\r\n",
+        "#At least 1 number between [0-9]\r\n",
+        "#At least 1 letter between [A-Z]\r\n",
+        "#At least 1 character from [$#@]\r\n",
+        "#Minimum length of transaction password: 6\r\n",
+        "#Maximum length of transaction password: 12 Your program should accept a sequence of \r\n",
+        "#comma separated passwords and will check them according to the above criteria. \r\n",
+        "#Passwords that match the criteria are to be printed, each separated by a comma. \r\n",
+        "#Example If the following passwords are given as input to the program: ABd1234@1,a F1#,2w3E*,2We3345 \r\n",
+        "# Then, the output of the program should be: ABd1234@1\r\n",
+        "\r\n",
+        "\r\n",
+        "import re\r\n",
+        "value = []\r\n",
+        "items=[x for x in input().split(',')]\r\n",
+        "for p in items:\r\n",
+        "    if len(p)<6 or len(p)>12:\r\n",
+        "        continue\r\n",
+        "    else:\r\n",
+        "        pass\r\n",
+        "    if not re.search(\"[a-z]\",p):\r\n",
+        "        continue\r\n",
+        "    elif not re.search(\"[0-9]\",p):\r\n",
+        "        continue\r\n",
+        "    elif not re.search(\"[A-Z]\",p):\r\n",
+        "        continue\r\n",
+        "    elif not re.search(\"[$#@]\",p):\r\n",
+        "        continue\r\n",
+        "    elif re.search(\"\\s\",p):\r\n",
+        "        continue\r\n",
+        "    else:\r\n",
+        "        pass\r\n",
+        "    value.append(p)\r\n",
+        "print(\",\".join(value))\r\n"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "ABd1234@1,a F1#,2w3E*,2We3345\n",
+            "ABd1234@1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t60rKMf6ODbP",
+        "outputId": "b3528df5-46f7-4b7d-c454-538bd55a19ac"
+      },
+      "source": [
+        "#15 Program\r\n",
+        "\r\n",
+        "#Define a class with a generator which can iterate the numbers, \r\n",
+        "#which are divisible by 7, between a given range 0 and n.\r\n",
+        "def putNumbers(n):\r\n",
+        "    i = 0\r\n",
+        "    while i<n:\r\n",
+        "        j=i\r\n",
+        "        i=i+1\r\n",
+        "        if j%7==0:\r\n",
+        "            yield j\r\n",
+        "\r\n",
+        "for i in putNumbers(100):\r\n",
+        "    print(i)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "7\n",
+            "14\n",
+            "21\n",
+            "28\n",
+            "35\n",
+            "42\n",
+            "49\n",
+            "56\n",
+            "63\n",
+            "70\n",
+            "77\n",
+            "84\n",
+            "91\n",
+            "98\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ro74fPxCQWjV",
+        "outputId": "49d5a060-9c37-4120-9ec8-0f09f19eaca4"
+      },
+      "source": [
+        "#16 Program\r\n",
+        "\r\n",
+        "#A robot moves in a plane starting from the original point (0,0). \r\n",
+        "#The robot can move toward UP, DOWN, LEFT and RIGHT with a given steps. \r\n",
+        "#The trace of robot movement is shown as the following: UP 5 DOWN 3 LEFT 3 RIGHT 2 ¡­\r\n",
+        "#The numbers after the direction are steps. \r\n",
+        "#Please write a program to compute the distance from current position \r\n",
+        "#after a sequence of movement and original point. \r\n",
+        "#If the distance is a float, then just print the nearest integer. \r\n",
+        "#Example: \r\n",
+        "#If the following tuples are given as input to the program: UP 5 DOWN 3 LEFT 3 RIGHT 2 Then, the output of the program should be: 2\r\n",
+        "\r\n",
+        "import math\r\n",
+        "pos = [0,0]\r\n",
+        "while True:\r\n",
+        "    s = input()\r\n",
+        "    if not s:\r\n",
+        "        break\r\n",
+        "    movement = s.split(\" \")\r\n",
+        "    direction = movement[0]\r\n",
+        "    steps = int(movement[1])\r\n",
+        "    if direction==\"UP\":\r\n",
+        "        pos[0]+=steps\r\n",
+        "    elif direction==\"DOWN\":\r\n",
+        "        pos[0]-=steps\r\n",
+        "    elif direction==\"LEFT\":\r\n",
+        "        pos[1]-=steps\r\n",
+        "    elif direction==\"RIGHT\":\r\n",
+        "        pos[1]+=steps\r\n",
+        "    else:\r\n",
+        "        pass\r\n",
+        "\r\n",
+        "print(int(round(math.sqrt(pos[1]**2+pos[0]**2))))\r\n",
+        "\r\n"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "UP 5 DOWN 3 LEFT 3 RIGHT 2\n",
+            "\n",
+            "5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H7cRSIfuRXUR",
+        "outputId": "c3c7721e-7d83-48c6-811a-70bb503741c6"
+      },
+      "source": [
+        "#17 Program\r\n",
+        "\r\n",
+        "#Write a program to compute the frequency of the words from the input. \r\n",
+        "#The output should output after sorting the key alphanumerically. \r\n",
+        "#Suppose the following input is supplied to the program: \r\n",
+        "#New to Python or choosing between Python 2 and Python 3? Read Python 2 or Python 3. \r\n",
+        "#Then, the output should be: 2:2 3.:1 3?:1 New:1 Python:5 Read:1 and:1 between:1 choosing:1 or:2 to:1\r\n",
+        "\r\n",
+        "freq = {}   # frequency of words in text\r\n",
+        "line = input()\r\n",
+        "for word in line.split():\r\n",
+        "    freq[word] = freq.get(word,0)+1\r\n",
+        "\r\n",
+        "words = list(freq.keys())\r\n",
+        "print(words.sort())\r\n",
+        "\r\n",
+        "for w in words:\r\n",
+        "    print(\"%s:%d\" % (w,freq[w]))\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "New to Python or choosing between Python 2 and Python 3? Read Python 2 or Python 3.\n",
+            "None\n",
+            "2:2\n",
+            "3.:1\n",
+            "3?:1\n",
+            "New:1\n",
+            "Python:5\n",
+            "Read:1\n",
+            "and:1\n",
+            "between:1\n",
+            "choosing:1\n",
+            "or:2\n",
+            "to:1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oO5L1TErS6Vh",
+        "outputId": "917d7c91-a518-4478-9064-997802388e85"
+      },
+      "source": [
+        "#18 Function\r\n",
+        "#Write a method which can calculate square value of number\r\n",
+        "\r\n",
+        "def square(num):\r\n",
+        "    return num ** 2\r\n",
+        "\r\n",
+        "print(square(2))\r\n",
+        "print(square(3))\r\n"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4\n",
+            "9\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d354d79KTPbN",
+        "outputId": "41b029cb-7a33-4438-e596-0fc5d0d4e1ec"
+      },
+      "source": [
+        "#19 Function\r\n",
+        "\r\n",
+        "# Python has many built-in functions, and if you do not know how to use it, you can read document online or find some books. But Python has a built-in document function for every built-in functions.\r\n",
+        "\r\n",
+        "#Please write a program to print some Python built-in functions documents, such as abs(), int(), raw_input()\r\n",
+        "\r\n",
+        "#And add document for your own function Hints: The built-in document method is doc\r\n",
+        "\r\n",
+        "print(abs.__doc__)\r\n",
+        "print(int.__doc__)\r\n",
+        "print(input.__doc__)\r\n",
+        "\r\n",
+        "def square(num):\r\n",
+        "    '''Return the square value of the input number.\r\n",
+        "    \r\n",
+        "    The input number must be integer.\r\n",
+        "    '''\r\n",
+        "    return num ** 2\r\n",
+        "\r\n",
+        "print(square(2))\r\n",
+        "print(square.__doc__)\r\n",
+        "\r\n"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Return the absolute value of the argument.\n",
+            "int(x=0) -> integer\n",
+            "int(x, base=10) -> integer\n",
+            "\n",
+            "Convert a number or string to an integer, or return 0 if no arguments\n",
+            "are given.  If x is a number, return x.__int__().  For floating point\n",
+            "numbers, this truncates towards zero.\n",
+            "\n",
+            "If x is not a number or if base is given, then x must be a string,\n",
+            "bytes, or bytearray instance representing an integer literal in the\n",
+            "given base.  The literal can be preceded by '+' or '-' and be surrounded\n",
+            "by whitespace.  The base defaults to 10.  Valid bases are 0 and 2-36.\n",
+            "Base 0 means to interpret the base from the string as an integer literal.\n",
+            ">>> int('0b100', base=0)\n",
+            "4\n",
+            "Forward raw_input to frontends\n",
+            "\n",
+            "        Raises\n",
+            "        ------\n",
+            "        StdinNotImplentedError if active frontend doesn't support stdin.\n",
+            "        \n",
+            "4\n",
+            "Return the square value of the input number.\n",
+            "    \n",
+            "    The input number must be integer.\n",
+            "    \n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "clztrb_8Tjxv",
+        "outputId": "8854d139-d254-4996-fa1e-16fd0e33ef40"
+      },
+      "source": [
+        "#20 Function\r\n",
+        "# Define a class, which have a class parameter and have a same instance parameter.\r\n",
+        "\r\n",
+        "class Person:\r\n",
+        "    # Define the class parameter \"name\"\r\n",
+        "    name = \"Person\"\r\n",
+        "    \r\n",
+        "    def __init__(self, name = None):\r\n",
+        "        # self.name is the instance parameter\r\n",
+        "        self.name = name\r\n",
+        "\r\n",
+        "jeffrey = Person(\"Jeffrey\")\r\n",
+        "print(\"%s name is %s\" % (Person.name, jeffrey.name))\r\n",
+        "\r\n",
+        "nico = Person()\r\n",
+        "nico.name = \"Nico\"\r\n",
+        "print(\"%s name is %s\" % (Person.name, nico.name))"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Person name is Jeffrey\n",
+            "Person name is Nico\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
