--- a/100_Python_Utilities.ipynb
+++ b/100_Python_Utilities.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "100 Python Utilities.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMvOoEOs14Kl5cEPvGBC+kC",
+      "authorship_tag": "ABX9TyOTW3sPPvXZS9KziroOQ097",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
         "items.sort()\r\n",
         "print(','.join(items))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,7 +80,7 @@
         "for sentence in lines:\r\n",
         "    print(sentence)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,7 +118,7 @@
         "print(\" \".join(sorted(list(set(words)))))\r\n",
         "\r\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,7 +158,7 @@
         "strObj.getString()\r\n",
         "strObj.printString()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,7 +197,7 @@
         "\r\n",
         "print(multilist)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,7 +232,7 @@
         "        values.append(s)\r\n",
         "print(\",\".join(values))"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,7 +270,7 @@
         "print(\"LETTERS\", d[\"LETTERS\"])\r\n",
         "print(\"DIGITS\", d[\"DIGITS\"])"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -311,7 +311,7 @@
         "print(\"LOWER CASE\", d[\"LOWER CASE\"])\r\n",
         "\r\n"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -348,7 +348,7 @@
         "for i in range(terms):\r\n",
         "   print(\"3 raised to power\",i,\"is\",result[i])"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -392,7 +392,7 @@
         "\r\n",
         "print_factors(num)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,7 +441,7 @@
         "n4 = int( \"%s%s%s%s\" % (a,a,a,a) )\r\n",
         "print(n1+n2+n3+n4)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,7 +473,7 @@
         "numbers = [x for x in values.split(\",\") if int(x)%2!=0]\r\n",
         "print(\",\".join(numbers))\r\n"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -521,7 +521,7 @@
         "\r\n",
         "\r\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -584,7 +584,7 @@
         "    value.append(p)\r\n",
         "print(\",\".join(value))\r\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -621,7 +621,7 @@
         "for i in putNumbers(100):\r\n",
         "    print(i)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -691,7 +691,7 @@
         "print(int(round(math.sqrt(pos[1]**2+pos[0]**2))))\r\n",
         "\r\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -736,7 +736,7 @@
         "\r\n",
         "\r\n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -778,7 +778,7 @@
         "print(square(2))\r\n",
         "print(square(3))\r\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -823,7 +823,7 @@
         "print(square.__doc__)\r\n",
         "\r\n"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -887,7 +887,7 @@
         "nico.name = \"Nico\"\r\n",
         "print(\"%s name is %s\" % (Person.name, nico.name))"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -917,7 +917,7 @@
         "\r\n",
         "printValue(3)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -947,7 +947,7 @@
         "\r\n",
         "printValue(\"3\",\"4\")"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -975,7 +975,7 @@
         "\r\n",
         "printValue(\"3\",\"4\") #34"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1013,7 +1013,7 @@
         "        \r\n",
         "printValue(\"one\",\"three\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1047,7 +1047,7 @@
         "\r\n",
         "printDict()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1082,7 +1082,7 @@
         "\r\n",
         "printDict()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1136,7 +1136,7 @@
         "\r\n",
         "printDict()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1188,7 +1188,7 @@
         "\r\n",
         "printList()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1222,7 +1222,7 @@
         "\r\n",
         "printList()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1256,7 +1256,7 @@
         "\r\n",
         "printList()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1290,7 +1290,7 @@
         "\r\n",
         "printList()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1324,7 +1324,7 @@
         "\t\t\r\n",
         "printTuple()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1356,7 +1356,7 @@
         "print(tp1)\r\n",
         "print(tp2)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1391,7 +1391,7 @@
         "tp2=tuple(li)\r\n",
         "print(tp2)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1423,7 +1423,7 @@
         "else:\r\n",
         "    print( \"No\")"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1454,7 +1454,7 @@
         "evenNumbers = list(filter(lambda x: x%2==0, li))\r\n",
         "print(evenNumbers)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1483,7 +1483,7 @@
         "squaredNumbers = list(map(lambda x: x**2, li))\r\n",
         "print(squaredNumbers)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1513,7 +1513,7 @@
         "evenNumbers = list(map(lambda x: x**2, filter(lambda x: x%2==0, li)))\r\n",
         "print(evenNumbers)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1542,7 +1542,7 @@
         "evenNumbers = list(filter(lambda x: x%2==0, range(1,21)))\r\n",
         "print(evenNumbers)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1570,7 +1570,7 @@
         "squaredNumbers = list(map(lambda x: x**2, range(1,21)))\r\n",
         "print(squaredNumbers)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1603,7 +1603,7 @@
         "anAmerican.printNationality()\r\n",
         "American.printNationality()"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1640,7 +1640,7 @@
         "print(anAmerican)\r\n",
         "print(aNewYorker)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1677,7 +1677,7 @@
         "aCircle = Circle(2)\r\n",
         "print (aCircle.area())"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1714,7 +1714,7 @@
         "aRectangle = Rectangle(2,10)\r\n",
         "print(aRectangle.area())"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1758,7 +1758,7 @@
         "aSquare= Square(3)\r\n",
         "print(aSquare.area())"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1785,7 +1785,7 @@
         "\r\n",
         "raise RuntimeError('something wrong')\r\n"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1825,7 +1825,7 @@
         "finally:\r\n",
         "    print('In finally block for cleanup')"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1864,7 +1864,7 @@
         "error = MyError(\"something wrong\")\r\n",
         "print(error)"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1905,7 +1905,7 @@
         "r2 = re.match(pat2,emailAddress)\r\n",
         "print(r2.group(1))"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1947,7 +1947,7 @@
         "print(r2.group(2))\r\n",
         "\r\n"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1987,7 +1987,7 @@
         "s = input()\r\n",
         "print(re.findall(\"\\d+\",s))"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2016,7 +2016,7 @@
         "unicodeString = u\"hello world!\"\r\n",
         "print(unicodeString)"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2056,7 +2056,7 @@
         "    sum += float(float(i)/(i+1))\r\n",
         "print(sum)"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2105,7 +2105,7 @@
         "n=int(input())\r\n",
         "print(f(n))"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2153,7 +2153,7 @@
         "n=int(input())\r\n",
         "print(f(n))"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2200,7 +2200,7 @@
         "values = [str(f(x)) for x in range(0, n+1)]\r\n",
         "print(\",\".join(values))"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2249,7 +2249,7 @@
         "\r\n",
         "print(\",\".join(values))"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2295,7 +2295,7 @@
         "\r\n",
         "print(\",\".join(values))"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2325,7 +2325,7 @@
         "for i in li:\r\n",
         "    assert i%2==0"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -2364,7 +2364,7 @@
         "expression = input()\r\n",
         "print(eval(expression))"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2379,13 +2379,156 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3MxM_4ThSKCq"
+        "id": "3MxM_4ThSKCq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "53e6cdf1-30f2-44c2-faad-144c3a7fe800"
       },
       "source": [
-        "#61 "
+        "#61 Program\r\n",
+        "\r\n",
+        "#Please generate a random float where the value is between 10 and 100 \r\n",
+        "\r\n",
+        "import random\r\n",
+        "print(random.random()*100)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "23.781371601599034\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tJr9YD30UhWf",
+        "outputId": "05590a0d-d2a7-4f3f-e5a0-ddc847f0d521"
+      },
+      "source": [
+        "#62 Program \r\n",
+        "#Please generate a random float where the value is between 5 and 95 \r\n",
+        "\r\n",
+        "import random\r\n",
+        "print(random.random()*100-5)"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "50.52827315694795\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qLL7ucNwUs6e",
+        "outputId": "f7dc1699-b907-4001-8f1f-0333933a21ee"
+      },
+      "source": [
+        "#63 Program\r\n",
+        "#Please write a program to output a random even number between 0 and 10 inclusive using random module and list comprehension.\r\n",
+        "\r\n",
+        "import random\r\n",
+        "print(random.choice([i for i in range(11) if i%2==0]))"
+      ],
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "6\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BS0F9bc2VCNj",
+        "outputId": "ab29662d-0ada-4537-bfcf-940e11700e10"
+      },
+      "source": [
+        "#  64 Program\r\n",
+        "\r\n",
+        "#Please write a program to compress and decompress the string \"hello world!hello world!hello world!hello world!\".\r\n",
+        "\r\n",
+        "\r\n",
+        "import zlib\r\n",
+        "s = b'hello world!hello world!hello world!hello world!'\r\n",
+        "t = list(zlib.compress(s)\r\n",
+        "print(t)\r\n",
+        "print(zlib.decompress(t))"
+      ],
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "b'x\\x9c\\xcbH\\xcd\\xc9\\xc9W(\\xcf/\\xcaIQ\\xcc \\x82\\r\\x00\\xbd[\\x11\\xf5'\n",
+            "b'hello world!hello world!hello world!hello world!'\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mKogSL7iXaGI",
+        "outputId": "43053e09-4486-4e1f-95fb-2a0a1e23851e"
+      },
+      "source": [
+        "#65 Program\r\n",
+        "#Please write a program to generate all sentences where subject is in \r\n",
+        "subjects=[\"I\", \"You\"]\r\n",
+        "verbs=[\"Play\", \"Love\"]\r\n",
+        "objects=[\"Hockey\",\"Football\"]\r\n",
+        "for i in range(len(subjects)):\r\n",
+        "    for j in range(len(verbs)):\r\n",
+        "        for k in range(len(objects)):\r\n",
+        "            sentence = \"%s %s %s.\" % (subjects[i], verbs[j], objects[k])\r\n",
+        "            print(sentence)"
+      ],
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "I Play Hockey.\n",
+            "I Play Football.\n",
+            "I Love Hockey.\n",
+            "I Love Football.\n",
+            "You Play Hockey.\n",
+            "You Play Football.\n",
+            "You Love Hockey.\n",
+            "You Love Football.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
