--- a/100_Python_Utilities.ipynb
+++ b/100_Python_Utilities.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "100 Python Utilities.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOTW3sPPvXZS9KziroOQ097",
+      "authorship_tag": "ABX9TyMMT0VT+d71I7P99foB97TH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2393,7 +2393,7 @@
         "import random\r\n",
         "print(random.random()*100)"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2420,7 +2420,7 @@
         "import random\r\n",
         "print(random.random()*100-5)"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2447,7 +2447,7 @@
         "import random\r\n",
         "print(random.choice([i for i in range(11) if i%2==0]))"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2479,7 +2479,7 @@
         "print(t)\r\n",
         "print(zlib.decompress(t))"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2512,7 +2512,7 @@
         "            sentence = \"%s %s %s.\" % (subjects[i], verbs[j], objects[k])\r\n",
         "            print(sentence)"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2525,6 +2525,478 @@
             "You Play Football.\n",
             "You Love Hockey.\n",
             "You Love Football.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gd153HpASwcs",
+        "outputId": "d3db29f8-a2b4-4bf3-9a2e-9e86d37cbd9d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#66 Program \r\n",
+        "\r\n",
+        "#Please write a program to print the list after removing delete even numbers in [5,6,77,45,22,12,24].\r\n",
+        "\r\n",
+        "li = [5,6,77,45,22,12,24]\r\n",
+        "li = [x for x in li if x%2!=0]\r\n",
+        "print(li)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[5, 77, 45]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DhxhDj8US3Fk",
+        "outputId": "7996aa6f-a2fa-4a52-80c1-091d24222c3c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#67 Program \r\n",
+        "#By using list comprehension, please write a program to print the list \r\n",
+        "#after removing delete numbers which are divisible by 5 and 7 in [12,24,35,70,88,120,155].\r\n",
+        "\r\n",
+        "li = [12,24,35,70,88,120,155]\r\n",
+        "li = [x for x in li if x%5!=0 and x%7!=0]\r\n",
+        "print(li)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[12, 24, 88]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mchsC0mLTDDr",
+        "outputId": "3c342b7f-85d9-4bd1-e6f3-3355aa23ef3e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#68 Program\r\n",
+        "#By using list comprehension, please write a program to print the list \r\n",
+        "#after removing the 0th, 2nd, 4th,6th numbers in [12,24,35,70,88,120,155].\r\n",
+        "\r\n",
+        "li = [12,24,35,70,88,120,155]\r\n",
+        "li = [x for (i,x) in enumerate(li) if i%2!=0]\r\n",
+        "print(li)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[24, 70, 120]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8cn5Ccp0TNYq",
+        "outputId": "063e8f35-bc54-4973-cfc6-2b19d19e8ae1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#69 Program \r\n",
+        "# By using list comprehension, please write a program generate a 358 3D array whose each element is 0.\r\n",
+        "\r\n",
+        "array = [[ [0 for col in range(8)] for col in range(5)] for row in range(3)]\r\n",
+        "print(array)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[[0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0]], [[0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0]], [[0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0]]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fCZIhNrwTZjQ",
+        "outputId": "d2e1595b-e4e6-44e1-91aa-c0f8e04df2a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#70 Program\r\n",
+        "\r\n",
+        "#By using list comprehension, please write a program to print the list after removing the 0th,4th,5th numbers in [12,24,35,70,88,120,155].\r\n",
+        "\r\n",
+        "li = [12,24,35,70,88,120,155]\r\n",
+        "li = [x for (i,x) in enumerate(li) if i not in (0,4,5)]\r\n",
+        "print(li)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[24, 35, 70, 155]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d1G-qdLbTj2z",
+        "outputId": "ee486de4-3b68-4b4e-9fe4-ffaa3581e7d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#71 Program\r\n",
+        "\r\n",
+        "#By using list comprehension, please write a program to print the list after removing the value 24 in [12,24,35,24,88,120,155].\r\n",
+        "\r\n",
+        "li = [12,24,35,24,88,120,155]\r\n",
+        "li = [x for x in li if x!=24]\r\n",
+        "print(li)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[12, 35, 88, 120, 155]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0FkNjlUQTuyX",
+        "outputId": "0a499de7-aad3-42a5-c3c2-1068ae40bf14",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#72 Program\r\n",
+        "# With two given lists [1,3,6,78,35,55] and [12,24,35,24,88,120,155], \r\n",
+        "# write a program to make a list whose elements are intersection of the above given lists.\r\n",
+        "\r\n",
+        "set1=set([1,3,6,78,35,55])\r\n",
+        "set2=set([12,24,35,24,88,120,155])\r\n",
+        "set1 &= set2\r\n",
+        "li=list(set1)\r\n",
+        "print(li)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[35]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZZ4oMWDmUEez",
+        "outputId": "2f6e5fa0-1c94-4f14-8de1-606ac913f966",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 73 Function\r\n",
+        "#With a given list [12,24,35,24,88,120,155,88,120,155], \r\n",
+        "#write a program to print this list after removing all duplicate values with original order reserved.\r\n",
+        "\r\n",
+        "def removeDuplicate( li ):\r\n",
+        "    newli=[]\r\n",
+        "    seen = set()\r\n",
+        "    for item in li:\r\n",
+        "        if item not in seen:\r\n",
+        "            seen.add( item )\r\n",
+        "            newli.append(item)\r\n",
+        "\r\n",
+        "    return newli\r\n",
+        "\r\n",
+        "li=[12,24,35,24,88,120,155,88,120,155]\r\n",
+        "print(removeDuplicate(li))"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[12, 24, 35, 88, 120, 155]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "X7ebEYWqUR5E",
+        "outputId": "5f23f54b-b342-4969-c216-bad8bfb80ad9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#74 Function\r\n",
+        "\r\n",
+        "#Define a class Person and its two child classes: Male and Female. \r\n",
+        "#All classes have a method \"getGender\" which can print \"Male\" for Male class and \"Female\" for Female class\r\n",
+        "\r\n",
+        "class Person(object):\r\n",
+        "    def getGender( self ):\r\n",
+        "        return \"Unknown\"\r\n",
+        "\r\n",
+        "class Male( Person ):\r\n",
+        "    def getGender( self ):\r\n",
+        "        return \"Male\"\r\n",
+        "\r\n",
+        "class Female( Person ):\r\n",
+        "    def getGender( self ):\r\n",
+        "        return \"Female\"\r\n",
+        "\r\n",
+        "aMale = Male()\r\n",
+        "aFemale= Female()\r\n",
+        "print(aMale.getGender())\r\n",
+        "print(aFemale.getGender())"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Male\n",
+            "Female\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4OdIfMgJUhKV",
+        "outputId": "51f7b9eb-7f40-4843-829f-337373ccabd5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#75 Program\r\n",
+        "\r\n",
+        "#Please write a program which count and print the numbers of each character in a string input by console.\r\n",
+        "\r\n",
+        "#Example: If the following string is given as input to the program:\r\n",
+        "\r\n",
+        "#abcdefgabc\r\n",
+        "\r\n",
+        "#Then, the output of the program should be:\r\n",
+        "\r\n",
+        "#a,2 c,2 b,2 e,1 d,1 g,1 f,1\r\n",
+        "\r\n",
+        "dic = {}\r\n",
+        "s=input()\r\n",
+        "for s in s:\r\n",
+        "    dic[s] = dic.get(s,0)+1\r\n",
+        "print('\\n'.join(['%s,%s' % (k, v) for k, v in dic.items()]))"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "abcdefgabc\n",
+            "a,2\n",
+            "b,2\n",
+            "c,2\n",
+            "d,1\n",
+            "e,1\n",
+            "f,1\n",
+            "g,1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RebDouIcU7zY",
+        "outputId": "c012fe8a-47a8-4a43-f676-55fdb4a93aa2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#76 Program\r\n",
+        "\r\n",
+        "#Please write a program which accepts a string from console and print it in reverse order.\r\n",
+        "\r\n",
+        "#Example: If the following string is given as input to the program:\r\n",
+        "\r\n",
+        "#rise to vote sir\r\n",
+        "\r\n",
+        "#Then, the output of the program should be:\r\n",
+        "\r\n",
+        "#ris etov ot esir\r\n",
+        "\r\n",
+        "s=input()\r\n",
+        "s = s[::-1]\r\n",
+        "print(s)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "rise to vote sir\n",
+            "ris etov ot esir\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yJ4YuhY5VK45",
+        "outputId": "47dbfa61-7fc3-466a-be4c-fec514e45245",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#77 Program \r\n",
+        "\r\n",
+        "#Please write a program which accepts a string from console and print the characters that have even indexes.\r\n",
+        "\r\n",
+        "#Example: If the following string is given as input to the program:\r\n",
+        "\r\n",
+        "#H1e2l3l4o5w6o7r8l9d\r\n",
+        "\r\n",
+        "#Then, the output of the program should be:\r\n",
+        "\r\n",
+        "#Helloworld\r\n",
+        "\r\n",
+        "s=input()\r\n",
+        "s = s[::2]\r\n",
+        "print(s)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "H1e2l3l4o5w6o7r8l9d\n",
+            "Helloworld\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u55nOYroVZlv",
+        "outputId": "73c3b8cf-2fbd-4b3f-b83a-89d3e64db04f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "\r\n",
+        "#Please write a program which prints all permutations of [1,2,3]\r\n",
+        "import itertools\r\n",
+        "print(list(itertools.permutations([1,2,3])))"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[(1, 2, 3), (1, 3, 2), (2, 1, 3), (2, 3, 1), (3, 1, 2), (3, 2, 1)]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ckSK7yJ6nJ1M",
+        "outputId": "e0510e85-fc2d-4dca-996a-1977118465f4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#78 Program\r\n",
+        "#Write a program to solve a classic ancient Chinese puzzle: \r\n",
+        "#We count 35 heads and 94 legs among the chickens and rabbits in a farm. \r\n",
+        "#How many rabbits and how many chickens do we have?\r\n",
+        "\r\n",
+        "def solve(numheads,numlegs):\r\n",
+        "    ns='No solutions!'\r\n",
+        "    for i in range(numheads+1):\r\n",
+        "        j=numheads-i\r\n",
+        "        if 2*i+4*j==numlegs:\r\n",
+        "            return i,j\r\n",
+        "    return ns,ns\r\n",
+        "\r\n",
+        "numheads=35\r\n",
+        "numlegs=94\r\n",
+        "solutions=solve(numheads,numlegs)\r\n",
+        "print(solutions)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(23, 12)\n"
           ],
           "name": "stdout"
         }
